# CameraCQJTU

./: CMakeLists.txt
SDK/include/: HSGdiplusDraw.h  HyvAlarmIsotherm.h  HyvDataApp.h  HyvHttpApi.h  HyvSNMac.h  HyvSdk.h  HyvStream.h  IRNet.h  InfEntity.h  InfraredTempSDK.h  InfraredTempSDK_def.h  VSNETStructDef.h  httpclient.h
SDK/include/hk/: hk_common.h  hk_common_def.h  hk_image.h  hk_ir.h  hk_national_grid_image.h  hk_temperature_stream.h
SDK/include/json/: config.h
SDK/x64/: CamSearch.lib  HyvStream.lib  IRNetSDK64.lib  InfraredTempSDK.lib  libeay32mt.lib  libjpeg.lib  ssleay32mt.lib
SDK/x64/hk/: hk_ad_data.lib  hk_ad_temp.lib  hk_common.lib  hk_image.lib  hk_imaging.lib  hk_ir.lib  hk_log.lib  hk_national_grid_image.lib  hk_temperature_stream.lib
SDK/x86/: CamSearch.lib  HSGdiplusDraw.lib  HSGdiplusDrawd.lib  HyvStream.exp  HyvStream.lib  HyvStreamd.lib  IRNetSDK.lib  InfraredTempSDK.lib  libjpeg.lib
SDK/x86/hk/: hk_ad_data.lib  hk_ad_temp.lib  hk_common.lib  hk_dev_cap.lib  hk_file_record.lib  hk_image.lib  hk_imaging.lib  hk_ir.lib  hk_log.lib  hk_national_grid_image.lib  hk_temperature_stream.lib
src/source/: CameraControl.cpp  main.cpp
